<resources>
    <string name="app_name">TabsListView</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
    <string name="top_title">Top</string>
    <string name="entertain_title">Entertain</string>
    <string name="world_title">World</string>
    <string name="biz_title">Biz</string>
    <string name="sport_title">Sport</string>
    <string name="tech_title">Tech</string>
    <string name="games_title">Games</string>

</resources>
